--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,8 @@ button {
   }
 
   .nav-link {
+    display: block;
+    padding: 24px 0;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -271,7 +273,7 @@ button {
 
 .mobile-nav-link {
   font-weight: 700;
-  font-size: 32px;
+  font-size: 36px;
   line-height: 1.1;
   letter-spacing: 0.02em;
   color: #2e2f42;
@@ -302,6 +304,7 @@ button {
   gap: 24px;
   margin-bottom: 48px;
 }
+
 .mobile-contacts-link {
   font-weight: 500;
   font-size: 20px;
@@ -313,6 +316,12 @@ button {
 .mobile-contacts-link:hover,
 .mobile-contacts-link:focus {
   color: #404bbf;
+}
+.mobile-contacts-phone {
+  color: #4d5ae5;
+}
+.mobile-contacts-email {
+  color: #434455;
 }
 .mobile-social-list {
   display: flex;
@@ -465,6 +474,7 @@ button {
   padding: 96px 16px;
 }
 .features-list {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -474,6 +484,7 @@ button {
   margin: 0;
 }
 .features-item {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -572,9 +583,11 @@ button {
 .team-section .container {
   width: 100%;
   max-width: 320px;
-  background-color: #f4f4fd;
   padding: 96px 28px;
   margin: 0 auto;
+}
+.team-section {
+  background-color: #f4f4fd;
 }
 .main-title {
   font-weight: 700;
@@ -713,6 +726,10 @@ button {
   display: flex;
   align-items: start;
   flex-direction: column;
+  box-shadow:
+    0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16),
+    0 1px 6px 0 rgba(46, 47, 66, 0.08);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-box {
@@ -817,6 +834,7 @@ button {
     display: block;
   }
   .portfolio-item {
+    box-shadow: none;
     width: calc((100% - 48px) / 3);
   }
 }
