--- a/css/styles.css
+++ b/css/styles.css
@@ -282,17 +282,6 @@ button {
 .mobile-nav-link.current {
   position: relative;
 }
-.mobile-nav-link.current::after {
-  content: "";
-
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  background-color: #404bbf;
-  border-radius: 2px;
-  width: 100%;
-  height: 4px;
-}
 .mobile-nav-link:hover,
 .mobile-nav-link:focus,
 .mobile-nav-link.current {
@@ -304,9 +293,9 @@ button {
   gap: 24px;
   margin-bottom: 48px;
 }
-
 .mobile-contacts-link {
   font-weight: 500;
+  font-style: normal;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
@@ -480,7 +469,7 @@ button {
 }
 /* Feature-section */
 .features-section {
-  padding: 96px 16px;
+  padding: 96px 0;
 }
 .features-list {
   width: 100%;
@@ -524,7 +513,7 @@ button {
     min-width: 768px;
   }
   .features-section {
-    padding: 76px 16px 96px 16px;
+    padding: 76px 0 96px 0;
   }
   .features-title {
     text-align: left;
@@ -597,7 +586,7 @@ button {
 /* team-section */
 .team-section {
   background-color: #f4f4fd;
-  padding: 96px 28px;
+  padding: 96px 0;
   margin: 0 auto;
 }
 .main-title {
@@ -679,7 +668,7 @@ button {
     min-width: 768px;
   }
   .team-section {
-    padding: 96px 108px;
+    padding: 96px;
     margin: 0 auto;
   }
   .team-list {
@@ -714,7 +703,7 @@ button {
 }
 /* portfolio section */
 .portfolio-section {
-  padding: 96px 16px;
+  padding: 96px 0;
 }
 .portfolio-list {
   display: flex;
@@ -850,7 +839,7 @@ button {
 /* Page footer */
 .page-footer {
   background-color: #2e2f42;
-  padding: 96px 16px;
+  padding: 96px 0;
 }
 .footer-page-container {
   display: flex;
@@ -951,7 +940,7 @@ button {
   width: 288px;
   height: 40px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background: #2e2f42;
+  background-color: transparent;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 12px;
@@ -995,6 +984,9 @@ button {
   gap: 16px;
   align-self: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button-subscrabe-ikon {
+  fill: #fff;
 }
 @media screen and (min-width: 768px) {
   .container {
@@ -1275,6 +1267,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
   border: 1px solid rgba(46, 47, 66, 0.4);
   fill: none;
   stroke: none;
